--- a/01-bear/the broun bear.html
+++ b/01-bear/the broun bear.html
@@ -10,63 +10,54 @@
 - [h3] -> [Species]<br>
 - [h3] -> [Features] </p>
 <p>
-2) 
-Below the [h3] heading that says [Features], <br>add an [h2] heading that says [Habitat]. </p>
+2) Below the [h3] heading that says [Features]: <br>
+- [h2] -> [Habitat]<br>
+- [h3] -> [Countries with Large Brown Bear Populations]<br>
+- [h3] -> [Countries with Small Brown Bear Populations]<br>
+- [h2] -> [Media] </p>
 <p>
-3) 
-Below the [Habitat] heading, add an [h3] heading <br>that says [Countries with Large Brown Bear Populations]. </p>
+3) Below the [h1] that says [The Brown Bear]: <br>
+[div] -> Close after the [h3] that says [Features]. </p>
 <p>
-4) 
-On the next line, add one more [h3] heading <br>that says [Countries with Small Brown Bear Populations]. </p>
+4) Above the [h2] that says [Habitat]: <br>
+[div] -> Close after the <br>[h3] that says [Countries with Small Brown Bear Populations]. </p>
 <p>
-5) 
-on the next line add an [h2] heading that says [Media].</p>
-
-6
-Below the <h1> heading that says The Brown Bear, add an opening <div> tag.
-Place the closing </div> tag after the <h3> element that says Features.
-Remember to use your space bar to add two spaces of indentation when you nest elements.
-
-7
-Above the <h2> element that says Habitat, add an opening <div> tag.
-Close the </div> tag after the <h3> element that says Countries with Small Brown Bear Populations.
-
-8
-Above the <h2> element that says Media, add an opening <div> tag.
-Place the closing </div> tag right above the closing </body> tag.
-
-9
-Add an id attribute with the value "introduction" to the <div> tag thatâs below the The Brown Bear <h1> heading.
-
-10
-Add an id attribute with the value "habitat" to the opening <div> tag that has the Habitat <h2> heading as a child.
-
-11
-Add an id attribute with the value "media" to the opening <div> tag that has the Media <h2> heading as a child.
+5)
+Above the [h2] element that says [Media]: <br>
+[div] -> Close right above the closing [/body] tag. </p>
+<p>
+6)
+Add an [id] attribute with the value [introduction] to <br>the [div] tag that's below the [The Brown Bear] [h1] heading. </p>
+<p>
+7)
+Add an [id] attribute with the value [habitat] to <br>the opening [div] tag that has the [Habitat] [h2] heading as a child.</p>
+<p>
+8)
+Add an [id] attribute with the value [media] to the opening <br>[div] tag that has the [Media] [h2] heading as a child.</p>
 
 12
-Below the <h2> element that says About Brown Bears, add <p> opening and closing tags, and inside of the tags put the following text:
+Below the [h2] element that says About Brown Bears, add [p] opening and closing tags, and inside of the tags put the following text:
 
 âThe brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently Least Concern. There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.â
 
 13
-Below the <h3> element that says Features, add a paragraph with the following text:
+Below the [h3] element that says Features, add a paragraph with the following text:
 
 âBrown bears are not always completely brown. Some can be reddish or yellowish. They have very large, curved claws and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet from head to toe.â
 
 14
-Under the <h3> element that says: Countries with Small Brown Bear Populations, Add a paragraph with the following text:
+Under the [h3] element that says: Countries with Small Brown Bear Populations, Add a paragraph with the following text:
 
 âSome countries with smaller brown bear populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan.â
 
 15
-In the first paragraph that starts âThe brown bearâ¦â, emphasize "Ursus arctos" using the <em> tag.
+In the first paragraph that starts âThe brown bearâ¦â, emphasize "Ursus arctos" using the [em] tag.
 
 16
-In the paragraph under "About Brown Bears", make the words "Least Concern" strong using the <strong> tag.
+In the paragraph under "About Brown Bears", make the words "Least Concern" strong using the [strong] tag.
 
 17
-Add two line breaks (<br>) after the sentence that ends with "Least Concern".
+Add two line breaks ([br]) after the sentence that ends with "Least Concern".
 
 18
 Under the heading that says Species, create an unordered list.
@@ -92,7 +83,7 @@ Add the following list items to the ordered list:
 "Canada"
 
 22
-Under the Media <h2> heading, add an image. Use the following URL as the source (src) for the image:
+Under the Media [h2] heading, add an image. Use the following URL as the source (src) for the image:
 
 [https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg]
 
@@ -100,7 +91,7 @@ Under the Media <h2> heading, add an image. Use the following URL as the source 
 Add the alt attribute to the image and include a description. Make sure the description accurately describes the image.
 
 24
-Under the image, add the following video url and wrap it in <video></video> tags:
+Under the image, add the following video url and wrap it in [video][/video] tags:
 
 [https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4]
 
@@ -108,7 +99,7 @@ Under the image, add the following video url and wrap it in <video></video> tags
 Define the width of the video as "320" and the height as "240". Make sure to also include the controls attribute.
 
 26
-In between the opening and closing <video> tags, add the phrase "Video not supported", which will be displayed if the browser is unable to load your video.
+In between the opening and closing [video] tags, add the phrase "Video not supported", which will be displayed if the browser is unable to load your video.
 
 27
 After the first paragraph, right above the heading that says Species, add a link that says: Learn More. 
@@ -119,7 +110,7 @@ Add the following URL to the link:
 add the target attribute and set it equal to _blank.
 
 28
-Directly below the opening <body> tag, add an anchor tag that links to index.html with a relative path. The link should say "Brown Bear".
+Directly below the opening [body] tag, add an anchor tag that links to index.html with a relative path. The link should say "Brown Bear".
 Under the link to index.html, add an anchor tag that links to aboutme.html using a relative path. The link should say "About Me". 
 
 29
