--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Static Template</title>
   </head>
   <body>
-    <h1><a href="./01-bear/index.html">The Brown Bear</a></h1>
-    <p><a href="01-bear/the broun bear.html">work</a></p>
+    <h1>The Brown Bear</h1>
+    <p>
+      <a href="01-bear/work.txt">work</a>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="01-bear/final/index.html">final</a>
+    </p>
   </body>
 </html>
