final-the brown bear

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>The Brown Bear</h1>
     <p>
-      <a href="01-bear/work.txt">work</a>
+      <a href="01-bear/work.txt" target="_blank">work</a>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <a href="01-bear/final/index.html">final</a>
+      <a href="01-bear/final/index.html" target="_blank">final</a>
     </p>
   </body>
 </html>
