--- a/index.html
+++ b/index.html
@@ -4,11 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
+    <link href="style.css" type="text/css" rel="stylesheet" />
+    <title>CodeCademy - HTML</title>
   </head>
   <body>
-    <h1>The Brown Bear</h1>
-    <p>
+    <h1>CodeCademy - HTML</h1>
+    <h2>1 - Introduction to HTML</h2>
+    <h3 class="s-h3">The Brown Bear</h3>
+    <p class="p-links">
+      <a href="01-bear/work.txt" target="_blank">work</a>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="01-bear/final/index.html" target="_blank">final</a>
+    </p>
+    <h3 class="s-h3">Fasion Blog</h3>
+    <p class="p-links">
+      <a href="01-bear/work.txt" target="_blank">work</a>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="01-bear/final/index.html" target="_blank">final</a>
+    </p>
+    <hr />
+    <h2>2 - Tables</h2>
+    <h3 class="s-h3">Tables</h3>
+    <p class="p-links">
+      <a href="01-bear/work.txt" target="_blank">work</a>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="01-bear/final/index.html" target="_blank">final</a>
+    </p>
+    <h3 class="s-h3">Wine Festival Schedule</h3>
+    <p class="p-links">
+      <a href="01-bear/work.txt" target="_blank">work</a>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="01-bear/final/index.html" target="_blank">final</a>
+    </p>
+    <hr />
+    <h2>1 - Introduction to HTML</h2>
+    <h3 style="margin-left: 20px; margin-bottom: 0px; padding-bottom: 0px;">
+      The Brown Bear
+    </h3>
+    <p style="margin-left: 120px; padding-top: 0px; margin-top: 5px;">
+      <a href="01-bear/work.txt" target="_blank">work</a>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="01-bear/final/index.html" target="_blank">final</a>
+    </p>
+    <h3 style="margin-left: 20px; margin-bottom: 0px; padding-bottom: 0px;">
+      Fasion blog
+    </h3>
+    <p style="margin-left: 120px; padding-top: 0px; margin-top: 5px;">
       <a href="01-bear/work.txt" target="_blank">work</a>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <a href="01-bear/final/index.html" target="_blank">final</a>
